[skip ci] documentation - added routes customization gude and adding spree to existing rails app

--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -16,6 +16,10 @@ description: 'Start building awesome e-commerce applications with Spree'
 
 Welcome to the Spree Commerce documentation guide. Follow the instructions below to learn how to build and deploy your Spree Commerce store.
 
+<Info>
+  If you want to add Spree to your existing Rails application, you can skip this page and go to the [Adding to an existing Rails app](adding_spree_to_rails_app) section.
+</Info>
+
 ### 1. Installing Spree
 
 <AccordionGroup>
