fixed installation instructions to include docker desktop

--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -37,7 +37,8 @@ Welcome to the Spree Commerce documentation guide. Follow the instructions below
       If you're on Windows remember to [install the Linux subsystem](https://docs.microsoft.com/en-us/windows/wsl/install-win10) before proceeding.
     </Note>
 
-    1. Install [git](https://git-scm.com/book/en/v2/Getting-Started-Installing-Git) and [Ruby](https://www.ruby-lang.org/en/installation/)
+    1. Install [git](https://github.com/git-guides/install-git), [Ruby](https://www.ruby-lang.org/en/documentation/installation) and [Docker Desktop](https://docs.docker.com/get-docker)
+
     2. Once git is installed, clone your docs repository using 
     
         ```basgh
