--- a/docs/developer/upgrades/4.6-to-4.7.mdx
+++ b/docs/developer/upgrades/4.6-to-4.7.mdx
@@ -4,7 +4,7 @@ description: This guide covers upgrading a 4.6 Spree application to Spree 4.7.
 ---
 
 <Warning>
-We recommend [upgrading straight to 4.8](4.7-to-4.8), as we improved how we handle translations in 4.8.
+We recommend [upgrading straight to 4.8](4.x-to-4.8), as we improved how we handle translations in 4.8.
 This also means easier database migration, especially if you have a big product catalog.
 </Warning>
 
