--- a/docs/developer/getting-started/quickstart.mdx
+++ b/docs/developer/getting-started/quickstart.mdx
@@ -5,11 +5,11 @@ description: 'Start building awesome e-commerce applications with Spree'
 
 <img
   className="block dark:hidden"
-  src="/images/spree_header_978-2x.png"
+  alt="Spree Commerce - Open Source e-commerce platform" src="https://github.com/spree/spree/assets/12614496/d6219d0f-4dd4-4ef2-a21a-8ba380cb6a37"
 />
 <img
   className="hidden dark:block"
-  src="/images/spree_header_978-2x.png"
+  alt="Spree Commerce - Open Source e-commerce platform" src="https://github.com/spree/spree/assets/12614496/d6219d0f-4dd4-4ef2-a21a-8ba380cb6a37"
 />
 
 ## Getting Started with Spree Commerce
