Update documentaion for spree_cli command in creating an extension

--- a/docs/developer/contributing/creating-an-extension.mdx
+++ b/docs/developer/contributing/creating-an-extension.mdx
@@ -14,7 +14,7 @@ Let's build a simple extension. Suppose we want the ability to mark certain prod
 Before we start, let's make sure we have Spree CLI installed by running:
 
 ```bash
-gem install spree_cmd
+gem install spree_cli
 ```
 
 So let's start by generating the extension. Run the following command from a directory of your choice outside of our Spree application:
