Add `apply_only_on_full_priced_items` preference to `FlatRate`, `FlexiRate` and `PercentOnLineItem` calculators

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -576,6 +576,7 @@ en:
     alternative_phone: Alternative Phone
     amount: Amount
     and: and
+    apply_only_on_full_priced_items: Apply only on full priced items
     approve: approve
     approver: Approver
     approved_at: Approved at
