--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -807,6 +807,7 @@ en:
         no_user_or_email_specified: You need to login or provide your email before applying this coupon code.
         no_user_specified: You need to login before applying this coupon code.
         not_first_order: This coupon code can only be applied to your first order.
+        wrong_country: This coupon code is not eligible in your country
     email: Email
     empty: Empty
     empty_cart: Empty Cart
