--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1605,6 +1605,7 @@ en:
       errors:
         must_have_variant: You must add at least one variant.
         variants_unavailable: "Some variants are not available on %{stock}"
+        same_location: "cannot be the same as the destination location"
     stock_transfers: Stock Transfers
     stop: Stop
     store: Store
