[skip CI] add missing translation

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -496,6 +496,7 @@ en:
       confirm: Confirm
       list: List
       listing: Listing
+      new: New
       connect: Connect
       discard: Discard
       destroy: Delete
