--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -491,14 +491,23 @@ en:
       cancel: Cancel
       continue: Continue
       create: Create
-      destroy: Destroy
+      approve: Approve
       edit: Edit
+      confirm: Confirm
       list: List
       listing: Listing
       new: New
+      connect: Connect
+      discard: Discard
+      destroy: Delete
+      disconnect: Disconnect
       refund: Refund
       save: Save
       update: Update
+      reject: Reject
+      receive: Mark as received
+      resolve: Mark as resolved
+      send_invitation: Send invitation
     activate: Activate
     active: Active
     add: Add
