--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -1706,10 +1706,14 @@ en:
     taxonomy: Taxonomy
     taxonomy_brands_name: Brands
     taxonomy_categories_name: Categories
+    taxonomy_collections_name: Collections
     taxonomy_edit: Edit taxonomy
     taxonomy_tree_error: The requested change has not been accepted and the tree has been returned to its previous state, please try again.
     taxonomy_tree_instruction: ! '* Right click (or double tap on iOS device) a child in the tree to access the menu for adding, deleting or sorting a child.'
     taxons: Taxons
+    automatic_taxon_names:
+      on_sale: On sale
+      new_arrivals: New arrivals
     test: Test
     test_mailer:
       test_email:
