--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -521,6 +521,7 @@ en:
     add_one: Add One
     add_option_value: Add Option Value
     add_product: Add Product
+    add_products: Add Products
     add_product_properties: Add Product Properties
     add_rule_of_type: Add rule of type
     add_state: Add State
@@ -1637,7 +1638,7 @@ en:
     stock_transfer_name: Stock Transfer
     stock_transfer:
       errors:
-        must_have_variant: You must add at least one variant.
+        must_have_variant: You must add at least one variant
         variants_unavailable: "Some variants are not available on %{stock}"
         same_location: "cannot be the same as the destination location"
     stock_transfers: Stock Transfers
