--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -129,6 +129,7 @@ en:
         all_orders: All Orders
         draft_orders: Draft Orders
         abandoned_checkouts: Abandoned Checkouts
+        orders_to_fulfill: Orders to fulfill
         remove_user_from_this_order: Remove customer from this order
         add_user_to_this_order: Add customer to this order
         payment_link_sent: Payment link was sent to the customer
