--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   spree:
     admin:
+      add_tracking_details: Add tracking details
       url: URL
       active: Active
       name: Name
@@ -33,6 +34,9 @@ en:
       export_only_filtered_records: Export only filtered records, matching the search criteria
       export_all: Export all records (can be slow for large datasets)
       export_created: Your export was started. You will receive an email with a download link when it is ready!
+      edit_contact_information: Edit contact information
+      edit_shipping_address: Edit shipping address
+      edit_billing_address: Edit billing address
       linkable:
         search_for_a_page: Search for a page
         search_for_a_taxon: Search for a Taxon
@@ -116,11 +120,20 @@ en:
       orders:
         all: All
         unpaid: Unpaid
+        fulfilled: Fulfilled
         unfulfilled: Unfulfilled
+        cancelled: Cancelled
+        refunded: Refunded
+        partially_refunded: Partially Refunded
         cart: Cart
         all_orders: All Orders
         draft_orders: Draft Orders
         abandoned_checkouts: Abandoned Checkouts
+        orders_to_fulfill: Orders to fulfill
+        remove_user_from_this_order: Remove customer from this order
+        add_user_to_this_order: Add customer to this order
+        payment_link_sent: Payment link was sent to the customer
+        no_email_present: Please add an email address to send the payment link
       oauth_applications:
         list: oAuth applications
         new: New oAuth application
