Add documentation v5 and v4 switcher, add v5 specific API endpoints

--- a/docs/developer/customization/quickstart.mdx
+++ b/docs/developer/customization/quickstart.mdx
@@ -1,5 +1,6 @@
 ---
 title: Quickstart
+og:title: Spree Customization Quickstart
 description: Learn how to customize every part of the Spree stack
 ---
 
